style:"Added pointer to track, fixed SCSS format to pure css, aligned marks to proper centre of track, marks are now pixel perfect"

--- a/src/components/Sliders/SliderBar.css
+++ b/src/components/Sliders/SliderBar.css
@@ -1,11 +1,12 @@
-.SliderBar {
-  margin: 0.3125rem 0;
-}
 .SliderBar-Wrapper {
   /* border-radius: 100%; */
   height: 5.5rem;
   width: 40.875rem;
   position: relative;
+}
+
+.SliderBar {
+  margin: 0.3125rem 0;
 }
 
 .SliderBar-track {
@@ -15,47 +16,41 @@
   border-radius: 0.5rem;
   height: 0.5rem;
   outline: none;
+  cursor: pointer;
   position: relative;
   width: 100%;
+}
+.SliderBar-track::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  background: rgba(108, 92, 231, 0);
+  height: 1.25rem;
+  width: 1.25rem;
+  border-radius: 100%;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+  transform: translateX(-50%);
+}
 
-  &::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Override default look */
-    appearance: none;
-    background: rgba(108, 92, 231, 0);
-    height: 1.25rem;
-    width: 1.25rem;
-    border-radius: 100%;
-    cursor: pointer;
-    transition: all 0.1s ease-in-out;
-    transform: translateX(-50%);
-    &:hover {
-      transform: scale(1.5);
-    }
-  }
+.SliderBar-track::-moz-range-thumb {
+  background: rgba(108, 92, 231, 0);
+  height: 1.25rem;
+  width: 1.25rem;
+  border-radius: 100%;
+  cursor: pointer;
+}
 
-  &::-moz-range-thumb {
-    background: rgba(108, 92, 231, 0);
-    height: 1.25rem;
-    width: 1.25rem;
-    border-radius: 100%;
-    cursor: pointer;
-  }
-
-  &::-ms-thumb {
-    background: rgba(108, 92, 231, 0);
-    height: 1.25rem;
-    width: 1.25rem;
-    border-radius: 100%;
-    cursor: pointer;
-  }
+.SliderBar-track::-ms-thumb {
+  background: rgba(108, 92, 231, 0);
+  height: 1.25rem;
+  width: 1.25rem;
+  border-radius: 100%;
+  cursor: pointer;
 }
 
 .Slider-marks-wrapper {
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
   position: relative;
-  width: 100%;
+  width: 98.5%;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -63,9 +58,8 @@
 
 .Slider-mark {
   transform: translateX(-50%);
-  top: -0.75rem;
+  top: -0.74rem;
   position: absolute;
-  /* background: #c7b9fa; */
   background: #000000;
   height: 0.3rem;
   width: 0.3rem;
@@ -76,7 +70,7 @@
 
 .Slider-mark-for-each-step {
   transform: translateX(-50%);
-  top: -0.7rem;
+  top: -0.74rem;
   position: absolute;
   /* background: #c7b9fa; */
   background: #000000;
@@ -97,7 +91,7 @@
 .Slider-custom-thumb {
   top: -1.35rem;
   position: absolute;
-  background: rgba(108, 92, 231, 0.41);
+  background: rgba(108, 92, 231, 1);
   height: 1.5rem;
   width: 1.5rem;
   border-radius: 50%;
@@ -105,20 +99,22 @@
   transform: translateX(-50%);
   transform-origin: 250%;
   transition: transform 0.25s ease-in-out; /* "transform 0.25s ease-in-out"This part is important, this will also make thumb scale smooth without applying transition to it's motion while sliding*/
-  &:hover {
-    transform: scale(1.25);
-  }
-  &:before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 2rem; /* Clickable area width */
-    height: 2rem; /* Clickable area height */
-    transform: translate(-50%, -50%);
-    background: transparent; /* Invisible but clickable area */
-    z-index: -1;
-  }
+}
+
+.Slider-custom-thumb:hover {
+  transform: scale(1.25);
+}
+
+.Slider-custom-thumb:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2rem; /* Clickable area width */
+  height: 2rem; /* Clickable area height */
+  transform: translate(-50%, -50%);
+  background: transparent; /* Invisible but clickable area */
+  z-index: -1;
 }
 
 .SliderBar-label-container {
